# Website2

./: .replit  LICENSE  README.md  app.py  index.py  pyproject.toml
templates/: footer.html  home.html  index.html  job.html  nav.html
